implemented logic for calculating average rates for vendors

--- a/vms/api/templates/purchase_order_notification_email.html
+++ b/vms/api/templates/purchase_order_notification_email.html
@@ -1,13 +1,48 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>New Purchase Order Notification</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        table {
+            border-collapse: collapse;
+            width: 100%;
+        }
+
+        th, td {
+            border: 1px solid black;
+            padding: 8px;
+            text-align: left;
+        }
+
+        tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+    </style>
 </head>
 <body>
     <p>Dear {{ purchase_order.vendor.name }},</p>
     <p>A new purchase order ({{ purchase_order.po_number }}) has been created.</p>
+    <p>
+        here is the list of the items
+    </p>
+    <div>
+        <table border="1">
+            <tr>
+                <th>Item Name</th>
+                <th>Quantity</th>
+            </tr>
+            {% for key, value in purchase_order.items.items %}
+                <tr>
+                    <td>{{ key }}</td>
+                    <td>{{ value }}</td>
+                </tr>
+            {% endfor %}
+        </table>
+    </div>
     <p>Please acknowledge the purchase order as soon as possible.</p>
-    <a href="localhost:8000/api/purchase_orders/{{purchase_order.id}}/acknowledge">click here to acknowledge</a>
+    <a href="http://localhost:8000/api/purchase_orders/{{purchase_order.id}}/acknowledge/">click here to acknowledge</a>
     <p>Thank you.</p>
 </body>
 </html>
